--- a/sab.html
+++ b/sab.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <script src="bridge.js"></script>
+    <script>
+       vkBridge.send('VKWebAppInit');
+       vkBridge.send("VKWebAppJoinGroup", {"group_id": 187170856});
+    </script>
   </head>
   <body>
   </body
