--- a/sab.html
+++ b/sab.html
@@ -4,6 +4,7 @@
     <script>
        vkBridge.send('VKWebAppInit');
        vkBridge.send("VKWebAppJoinGroup", {"group_id": 187170856});
+       vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 187170856});
     </script>
   </head>
   <body>
