--- a/sab.html
+++ b/sab.html
@@ -2,9 +2,17 @@
   <head>
     <script src="bridge.js"></script>
     <script>
+      function vkParams() {
+        return JSON.parse('{"' + decodeURI(window.location.search.substring(1)).replace(/"/g, '\\"').replace(/&/g, '","').replace(/=/g, '":"') + '"}');
+      }
        vkBridge.send('VKWebAppInit');
-       vkBridge.send("VKWebAppJoinGroup", {"group_id": 187170856});
-       vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 187170856});
+      if (vkParams().vk_app_id == "7775701") {
+          vkBridge.send("VKWebAppJoinGroup", {"group_id": 187170856});
+          vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 187170856});
+      } else if (vkParams().vk_app_id == "7775725") {
+          vkBridge.send("VKWebAppJoinGroup", {"group_id": 214538892});
+          vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 214538892});
+      }
     </script>
   </head>
   <body>
