--- a/sab.html
+++ b/sab.html
@@ -12,7 +12,10 @@
       } else if (vkParams().vk_app_id == "7775725") {
           vkBridge.send("VKWebAppJoinGroup", {"group_id": 213876528});
           vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 213876528});
-      }
+      } else if (vkParams().vk_app_id == "7667878") {
+          vkBridge.send("VKWebAppJoinGroup", {"group_id": 187170856});
+          vkBridge.send("VKWebAppAllowMessagesFromGroup", {"group_id": 187170856}); 
+      } 
     </script>
   </head>
   <body>
